<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/info_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ci_title_climate_information"
            android:textSize="25sp"
            android:layout_marginTop="30dp"
    />

    <TextView
            android:id="@+id/info_tv_city_name"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="35sp"
            android:text="@string/ci_label_unavailable_message"
    />

    <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

        <LinearLayout
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ci_title_min_temp"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ci_title_max_temp"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
            />



        </LinearLayout>

        <LinearLayout
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/info_tv_temp_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ci_label_unavailable_message"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
            />

            <TextView
                    android:id="@+id/info_tv_temp_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ci_label_unavailable_message"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
            />

        </LinearLayout>
    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ci_title_condition"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
    />

    <TextView
            android:id="@+id/info_tv_weather_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ci_label_unavailable_message"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
    />
</LinearLayout>